# docs/swagger.json
@@ -22,10 +22,10 @@
                 "tags": [
                     "Accounts"
                 ],
-                "summary": "create",
+                "summary": "replenish / withdraw account",
                 "parameters": [
                     {
-                        "description": "data",
+                        "description": "accountId (uuid string) , userid (uuid string) , amount (int) | {",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -45,7 +45,7 @@
             }
         },
         "/blockaccount": {
-            "get": {
+            "post": {
                 "consumes": [
                     "application/json"
                 ],
@@ -55,21 +55,16 @@
                 "tags": [
                     "Accounts"
                 ],
-                "summary": "create",
+                "summary": "block acc from operations",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "userid",
-                        "name": "userid",
-                        "in": "path",
-                        "required": true
+                        "description": "id (uuid string) , userid (uuid string) | {",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
@@ -82,7 +77,7 @@
                 }
             }
         },
-        "/getaccountdetails": {
+        "/getaccountdetails/{userid}/{id}": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -93,19 +88,19 @@
                 "tags": [
                     "Accounts"
                 ],
-                "summary": "create",
+                "summary": "get account details",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
-                        "name": "id",
+                        "description": "userid uuid string",
+                        "name": "userid",
                         "in": "path",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "userid",
-                        "name": "userid",
+                        "description": "id uuid string",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -128,7 +123,7 @@
                 "tags": [
                     "Accounts"
                 ],
-                "summary": "create",
+                "summary": "get all accounts",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -178,10 +173,10 @@
                 "tags": [
                     "Accounts"
                 ],
-                "summary": "create",
+                "summary": "create new account",
                 "parameters": [
                     {
-                        "description": "Userid, IsCredit, Balance, Currency",
+                        "description": "Userid (string) , IsCredit (bool) , Balance (int) , Currency (1-3) | {",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -211,11 +206,11 @@
                 "tags": [
                     "Users"
                 ],
-                "summary": "Sign in",
+                "summary": "sign in (no functionality yet)",
                 "parameters": [
                     {
-                        "description": "id",
-                        "name": "id",
+                        "description": "login (uuid string) , password (uuid string) | {",
+                        "name": "data",
                         "in": "body",
                         "required": true,
                         "schema": {
@@ -247,7 +242,7 @@
                 "summary": "create",
                 "parameters": [
                     {
-                        "description": "data",
+                        "description": "Fullname (string) , Login (string) , Password (string) | {",
                         "name": "data",
                         "in": "body",
                         "required": true,
@@ -262,6 +257,34 @@
                         "schema": {
                             "$ref": "#/definitions/models.Customer"
                         }
+                    }
+                }
+            }
+        },
+        "/user/block/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Block user by himself with id",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "uuid",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     }
                 }
             }
@@ -293,34 +316,6 @@
                         "schema": {
                             "$ref": "#/definitions/models.Customer"
                         }
-                    }
-                }
-            }
-        },
-        "/user/{id}/block": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Users"
-                ],
-                "summary": "Block user by himself with id",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "id",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK"
                     }
                 }
             }
